+init lab notebook

--- a/lab02/02 RAPL Energy Consumption.ipynb
+++ b/lab02/02 RAPL Energy Consumption.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "48ebbe16",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bfc2bd9e",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "4064c1e9",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current energy counter value: 53460156232\n"
+      "Current energy counter value: 6149920657\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "e605aa78",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "00297a5c",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "a46364ae",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Energy consumed: 9.3820804 J\n"
+      "Energy consumed: 7.734623600000001 J\n"
      ]
     }
    ],
@@ -257,8 +257,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e731a4f4-149d-4b53-aa2b-6925adc1f0ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "save test\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"save test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aa0123e-f1ea-46d8-8806-da20e7ec5925",
    "metadata": {},
    "outputs": [],
    "source": []
