--- a/energy_efficient_programming_lab/EnergyEfficientProgramming_lab.ipynb
+++ b/energy_efficient_programming_lab/EnergyEfficientProgramming_lab.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "**Note:** this notebook is meant to be executed on the supplied Docker image.\n",
     "\n",
-    "**Aim:** The aim of this notebook is to present energy efficient programming methods and relation between execution time and used energy."
+    "**Aim:** The aim of this notebook is to present energy efficient programming methods and relation between execution time and used energy while execution graph algorithms."
    ]
   },
   {
@@ -369,7 +369,35 @@
     "\n",
     "def draw_power_plot(E, T, P):\n",
     "    \"\"\" \n",
-    "    Draw plots (3 subplots) E(power_limit), T(power_limit), P(power_limit)\n",
+    "    Draw plots (2 subplots) P(power_limit), EDP(power_limit)\n",
+    "    \n",
+    "        E: energy consumption depending on power limit [J]\n",
+    "        T: execution time depending on power limit [s]\n",
+    "        P: power limits [W]\n",
+    "    \"\"\"\n",
+    "\n",
+    "    fig, ax = plt.subplots(1,2, figsize=(12, 6))\n",
+    "\n",
+    "    power = E/T\n",
+    "    ax[0].scatter(P, power)\n",
+    "    ax[0].plot(P, power, '--')\n",
+    "    ax[0].set_ylabel(\"Power [W]\")\n",
+    "    ax[0].set_xlabel(\"Power limit [W]\")\n",
+    "    ax[0].set_title(\"Power usage depending on set power limit\")\n",
+    "\n",
+    "    edp_vals = edp(E, T)\n",
+    "    ax[1].scatter(P, edp_vals)\n",
+    "    ax[1].plot(P, edp_vals, '--')\n",
+    "    ax[1].set_ylabel(\"EDP\")\n",
+    "    ax[1].set_xlabel(\"Power limit [W]\")\n",
+    "    ax[1].set_title(\"EDP depending on set power limit\")\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def draw_energy_plots(E, T, P):\n",
+    "    \"\"\" \n",
+    "    Draw plots (2 subplots) E(power_limit), T(power_limit)\n",
     "    \n",
     "        E: energy consumption depending on power limit [J]\n",
     "        T: execution time depending on power limit [s]\n",
@@ -378,39 +406,21 @@
     "\n",
     "    fig, ax = plt.subplots()\n",
     "\n",
-    "    fig.suptitle(\"Power usage depending on set power limit\")\n",
-    "\n",
-    "    ax.scatter(P, E/T)\n",
-    "    ax.set_ylabel(\"Power [W]\")\n",
-    "    ax.set_xlabel(\"Power limit [W]\")\n",
-    "\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def draw_energy_plots(E, T, P):\n",
-    "    \"\"\" \n",
-    "    Draw plots (3 subplots) E(power_limit), T(power_limit), P(power_limit)\n",
-    "    \n",
-    "        E: energy consumption depending on power limit [J]\n",
-    "        T: execution time depending on power limit [s]\n",
-    "        P: power limits [W]\n",
-    "    \"\"\"\n",
-    "\n",
-    "    fig, ax = plt.subplots(1, 3, figsize=(18, 6))\n",
-    "\n",
     "    fig.suptitle(\"Power capping - measurements\")\n",
     "\n",
-    "    ax[0].scatter(P, E)\n",
-    "    ax[0].set_ylabel(\"Energy [J]\")\n",
-    "    ax[0].set_xlabel(\"Power limit [W]\")\n",
+    "    ax1 = ax.twinx()\n",
     "\n",
-    "    ax[1].scatter(P, T)\n",
-    "    ax[1].set_ylabel(\"Time [s]\")\n",
-    "    ax[1].set_xlabel(\"Power limit [W]\")\n",
-    "    \n",
-    "    ax[2].scatter(P, edp(E, T))\n",
-    "    ax[2].set_ylabel(\"EDP\")\n",
-    "    ax[2].set_xlabel(\"Power limit [W]\")\n",
+    "    ax.scatter(P, E, color='tab:blue')\n",
+    "    ax.plot(P,E, '--', color='tab:blue')\n",
+    "    ax.set_ylabel(\"Energy [J]\", color='tab:blue')\n",
+    "    ax.set_xlabel(\"Power limit [W]\")\n",
+    "    ax.tick_params(axis='y', labelcolor='tab:blue')\n",
+    "\n",
+    "    ax1.scatter(P, T, color='tab:green')\n",
+    "    ax1.plot(P,T, '--', color='tab:green')\n",
+    "    ax1.set_ylabel(\"Time [s]\", color='tab:green')\n",
+    "    ax1.set_xlabel(\"Power limit [W]\")\n",
+    "    ax1.tick_params(axis='y', labelcolor='tab:green')\n",
     "\n",
     "    plt.show()"
    ]
@@ -471,6 +481,7 @@
    "outputs": [],
    "source": [
     "power_limits = [int(i*1e7) for i in range(2, 10)]\n",
+    "power_limits_w = [limit // int(1e6) for limit in power_limits]\n",
     "print(power_limits)\n",
     "n_power_limits = len(power_limits)"
    ]
@@ -489,24 +500,21 @@
    "outputs": [],
    "source": [
     "matrix_size = 10000\n",
-    "n_tests = 1\n",
     "\n",
     "np.random.seed(42)\n",
-    "test_matrices = [(np.random.rand(matrix_size, matrix_size), np.random.rand(matrix_size, matrix_size))for _ in range(n_tests)]\n",
+    "test_matrices = np.random.rand(matrix_size, matrix_size), np.random.rand(matrix_size, matrix_size)\n",
     "\n",
-    "ex_time = np.zeros((n_power_limits, n_tests))\n",
-    "energy = np.zeros((n_power_limits, n_tests))\n",
+    "ex_time = np.zeros((n_power_limits, 1))\n",
+    "energy = np.zeros((n_power_limits, 1))\n",
     "\n",
     "idx = 0\n",
     "for limit in power_limits:\n",
     "    change_power_limits_uw(1, limit)\n",
     "\n",
-    "    for i in range(n_tests):\n",
+    "    t, energy_consumed_j = np_test(test_matrices[0], test_matrices[1])\n",
     "\n",
-    "        t, energy_consumed_j = np_test(test_matrices[i][0], test_matrices[i][1])\n",
-    "\n",
-    "        ex_time[idx][i] = t\n",
-    "        energy[idx][i] = energy_consumed_j\n",
+    "    ex_time[idx] = t\n",
+    "    energy[idx] = energy_consumed_j\n",
     "\n",
     "    idx += 1\n",
     "\n",
@@ -519,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_energy_plots(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_energy_plots(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -528,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_power_plot(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_power_plot(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -600,6 +608,7 @@
    "outputs": [],
    "source": [
     "power_limits = [int(i*1e7) for i in range(2, 10)]\n",
+    "power_limits_w = [limit // int(1e6) for limit in power_limits]\n",
     "print(power_limits)\n",
     "n_power_limits = len(power_limits)"
    ]
@@ -617,10 +626,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_tests = 10\n",
-    "\n",
-    "ex_time = np.zeros((n_power_limits, n_tests))\n",
-    "energy = np.zeros((n_power_limits, n_tests))\n",
+    "ex_time = np.zeros((n_power_limits, 1))\n",
+    "energy = np.zeros((n_power_limits, 1))\n",
     "\n",
     "G = nx.random_internet_as_graph(int(5e4), seed=42)\n",
     "\n",
@@ -628,12 +635,10 @@
     "for limit in power_limits:\n",
     "    change_power_limits_uw(1, limit)\n",
     "\n",
-    "    for i in range(n_tests):\n",
+    "    t, energy_consumed_j = test_graph_bfs(G)\n",
     "\n",
-    "        t, energy_consumed_j = test_graph_bfs(G)\n",
-    "\n",
-    "        ex_time[idx][i] = t\n",
-    "        energy[idx][i] = energy_consumed_j\n",
+    "    ex_time[idx] = t\n",
+    "    energy[idx] = energy_consumed_j\n",
     "\n",
     "    idx += 1\n",
     "\n",
@@ -646,7 +651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_energy_plots(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_energy_plots(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -655,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_power_plot(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_power_plot(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -673,10 +678,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "n_tests = 10\n",
-    "\n",
-    "ex_time = np.zeros((n_power_limits, n_tests))\n",
-    "energy = np.zeros((n_power_limits, n_tests))\n",
+    "ex_time = np.zeros((n_power_limits, 1))\n",
+    "energy = np.zeros((n_power_limits, 1))\n",
     "\n",
     "G = nx.random_internet_as_graph(int(5e4), seed=42)\n",
     "\n",
@@ -684,12 +687,11 @@
     "for limit in power_limits:\n",
     "    change_power_limits_uw(1, limit)\n",
     "\n",
-    "    for i in range(n_tests):\n",
     "\n",
-    "        t, energy_consumed_j = test_graph_dfs(G)\n",
+    "    t, energy_consumed_j = test_graph_dfs(G)\n",
     "\n",
-    "        ex_time[idx][i] = t\n",
-    "        energy[idx][i] = energy_consumed_j\n",
+    "    ex_time[idx] = t\n",
+    "    energy[idx] = energy_consumed_j\n",
     "\n",
     "    idx += 1\n",
     "\n",
@@ -702,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_energy_plots(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_energy_plots(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -711,8 +713,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_power_plot(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_power_plot(energy, ex_time, power_limits_w)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
