--- a/energy_efficient_programming_lab/EnergyEfficientProgramming_student.ipynb
+++ b/energy_efficient_programming_lab/EnergyEfficientProgramming_student.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "**Note:** this notebook is meant to be executed on the supplied Docker image.\n",
     "\n",
-    "**Aim:** The aim of this notebook is to present energy efficient programming methods and relation between execution time and used energy."
+    "**Aim:** The aim of this notebook is to present energy efficient programming methods and relation between execution time and used energy while execution graph algorithms."
    ]
   },
   {
@@ -366,7 +366,34 @@
     "\n",
     "def draw_power_plot(E, T, P):\n",
     "    \"\"\" \n",
-    "        Draw average power plot depending on power limits.\n",
+    "        Draw 2 subplots: power(power limits) and EDP(power limits)\n",
+    "        \n",
+    "            E: energy consumption depending on power limit [J]\n",
+    "            T: execution time depending on power limit [s]\n",
+    "            P: power limits [W]\n",
+    "    \"\"\"\n",
+    "\n",
+    "    fig, ax = plt.subplots(1,2, figsize=(12, 6))\n",
+    "\n",
+    "    power = ...\n",
+    "    ax[0].scatter(P, power)\n",
+    "    ax[0].plot(P, power, '--')\n",
+    "    ax[0].set_ylabel(\"Power [W]\")\n",
+    "    ax[0].set_xlabel(\"Power limit [W]\")\n",
+    "    ax[0].set_title(\"Power usage depending on set power limit\")\n",
+    "\n",
+    "    edp_vals = ...\n",
+    "    ax[1].scatter(P, edp_vals)\n",
+    "    ax[1].plot(P, edp_vals, '--')\n",
+    "    ax[1].set_ylabel(\"EDP\")\n",
+    "    ax[1].set_xlabel(\"Power limit [W]\")\n",
+    "    ax[1].set_title(\"EDP depending on set power limit\")\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "def draw_energy_plots(E, T, P):\n",
+    "    \"\"\" \n",
+    "        Draw plots on 1 graph E(power_limit), T(power_limit)\n",
     "        \n",
     "            E: energy consumption depending on power limit [J]\n",
     "            T: execution time depending on power limit [s]\n",
@@ -375,41 +402,21 @@
     "\n",
     "    fig, ax = plt.subplots()\n",
     "\n",
-    "    fig.suptitle(\"Power usage depending on set power limit\")\n",
-    "    \n",
-    "    raise Exception(\"Unimplemented 'draw_power_plot'\")\n",
-    "    # ax.scatter(\"...\")\n",
-    "    \n",
-    "    ax.set_ylabel(\"Power [W]\")\n",
-    "    ax.set_xlabel(\"Power limit [W]\")\n",
-    "\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "def draw_energy_plots(E, T, P):\n",
-    "    \"\"\" \n",
-    "        Draw plots (3 subplots) E(power_limit), T(power_limit), P(power_limit)\n",
-    "        \n",
-    "            E: energy consumption depending on power limit [J]\n",
-    "            T: execution time depending on power limit [s]\n",
-    "            P: power limits [W]\n",
-    "    \"\"\"\n",
-    "\n",
-    "    fig, ax = plt.subplots(1, 3, figsize=(18, 6))\n",
-    "\n",
     "    fig.suptitle(\"Power capping - measurements\")\n",
     "\n",
-    "    ax[0].scatter(P, E)\n",
-    "    ax[0].set_ylabel(\"Energy [J]\")\n",
-    "    ax[0].set_xlabel(\"Power limit [W]\")\n",
+    "    ax1 = ax.twinx()\n",
     "\n",
-    "    ax[1].scatter(P, T)\n",
-    "    ax[1].set_ylabel(\"Time [s]\")\n",
-    "    ax[1].set_xlabel(\"Power limit [W]\")\n",
-    "    \n",
-    "    ax[2].scatter(P, edp(E, T))\n",
-    "    ax[2].set_ylabel(\"EDP\")\n",
-    "    ax[2].set_xlabel(\"Power limit [W]\")\n",
+    "    ax.scatter(P, E, color='tab:blue')\n",
+    "    ax.plot(P,E, '--', color='tab:blue')\n",
+    "    ax.set_ylabel(\"Energy [J]\", color='tab:blue')\n",
+    "    ax.set_xlabel(\"Power limit [W]\")\n",
+    "    ax.tick_params(axis='y', labelcolor='tab:blue')\n",
+    "\n",
+    "    ax1.scatter(P, T, color='tab:green')\n",
+    "    ax1.plot(P,T, '--', color='tab:green')\n",
+    "    ax1.set_ylabel(\"Time [s]\", color='tab:green')\n",
+    "    ax1.set_xlabel(\"Power limit [W]\")\n",
+    "    ax1.tick_params(axis='y', labelcolor='tab:green')\n",
     "\n",
     "    plt.show()"
    ]
@@ -468,9 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "power_limits = [int(i*1e7) for i in range(2, 10)]\n",
-    "print(power_limits)\n",
-    "n_power_limits = len(power_limits)"
+    "power_limits = ..."
    ]
   },
   {
@@ -487,10 +492,9 @@
    "outputs": [],
    "source": [
     "matrix_size = 10000\n",
-    "n_tests = 1\n",
     "\n",
     "np.random.seed(42)\n",
-    "test_matrices = [(np.random.rand(matrix_size, matrix_size), np.random.rand(matrix_size, matrix_size))for _ in range(n_tests)]\n",
+    "test_matrices = (np.random.rand(matrix_size, matrix_size), np.random.rand(matrix_size, matrix_size))\n",
     "\n",
     "ex_time = np.zeros((n_power_limits, n_tests))\n",
     "energy = np.zeros((n_power_limits, n_tests))\n",
@@ -499,12 +503,10 @@
     "for limit in power_limits:\n",
     "    change_power_limits_uw(1, limit)\n",
     "\n",
-    "    for i in range(n_tests):\n",
+    "    t, energy_consumed_j = np_test(test_matrices[i][0], test_matrices[i][1])\n",
     "\n",
-    "        t, energy_consumed_j = np_test(test_matrices[i][0], test_matrices[i][1])\n",
-    "\n",
-    "        ex_time[idx][i] = t\n",
-    "        energy[idx][i] = energy_consumed_j\n",
+    "    ex_time[idx][ = t\n",
+    "    energy[idx] = energy_consumed_j\n",
     "\n",
     "    idx += 1\n",
     "\n",
@@ -517,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_energy_plots(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_energy_plots(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -526,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_power_plot(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_power_plot(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -591,9 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "power_limits = [int(i*1e7) for i in range(2, 10)]\n",
-    "print(power_limits)\n",
-    "n_power_limits = len(power_limits)"
+    "power_limits = ..."
    ]
   },
   {
@@ -609,10 +609,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_tests = 1\n",
-    "\n",
-    "ex_time = np.zeros((n_power_limits, n_tests))\n",
-    "energy = np.zeros((n_power_limits, n_tests))\n",
+    "ex_time = np.zeros((n_power_limits, 1))\n",
+    "energy = np.zeros((n_power_limits, 1))\n",
     "\n",
     "G = nx.random_internet_as_graph(int(5e4), seed=42)\n",
     "\n",
@@ -620,12 +618,10 @@
     "for limit in power_limits:\n",
     "    change_power_limits_uw(1, limit)\n",
     "\n",
-    "    for i in range(n_tests):\n",
+    "    t, energy_consumed_j = test_graph_bfs(G)\n",
     "\n",
-    "        t, energy_consumed_j = test_graph_bfs(G)\n",
-    "\n",
-    "        ex_time[idx][i] = t\n",
-    "        energy[idx][i] = energy_consumed_j\n",
+    "    ex_time[idx] = t\n",
+    "    energy[idx] = energy_consumed_j\n",
     "\n",
     "    idx += 1\n",
     "\n",
@@ -638,7 +634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_energy_plots(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_energy_plots(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -647,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_power_plot(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_power_plot(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -663,12 +659,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "n_tests = 1\n",
-    "\n",
-    "ex_time = np.zeros((n_power_limits, n_tests))\n",
-    "energy = np.zeros((n_power_limits, n_tests))\n",
+    "ex_time = np.zeros((n_power_limits, 1))\n",
+    "energy = np.zeros((n_power_limits, 1))\n",
     "\n",
     "G = nx.random_internet_as_graph(int(5e4), seed=42)\n",
     "\n",
@@ -680,8 +672,8 @@
     "\n",
     "        t, energy_consumed_j = test_graph_dfs(G)\n",
     "\n",
-    "        ex_time[idx][i] = t\n",
-    "        energy[idx][i] = energy_consumed_j\n",
+    "        ex_time[idx] = t\n",
+    "        energy[idx] = energy_consumed_j\n",
     "\n",
     "    idx += 1\n",
     "\n",
@@ -694,7 +686,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_energy_plots(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_energy_plots(energy, ex_time, power_limits_w)"
    ]
   },
   {
@@ -703,7 +695,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_power_plot(ex_time.mean(axis=1), energy.mean(axis=1), power_limits)"
+    "draw_power_plot(energy, ex_time, power_limits_w)"
    ]
   }
  ],
